# wayremap

./: LICENSE  README.md  pyproject.toml  test-module.py
.github/workflows/: release.yml  test.yml
example/: multiple-keyboards.py  print-inputs.py  remap-like-osx.py
systemd/: wayremap.service
wayremap/: __init__.py  all_keys.py  config.py  constants.py  ecodes.py  i3ipc-test.py  keycode_map.py  main.py  os-test.py
