[tool.poetry]
name = "wayremap"
version = "0.0.7"
description = "A dynamic keyboard remapper for Wayland."
authors = ["Kay Gosho <ketsume0211@gmail.com>"]
repository = "https://github.com/acro5piano/wayremap"
readme = "README.md"
homepage = "https://github.com/acro5piano/wayremap"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-uinput = "^0.11.2"
evdev = "^1.4.0"
i3ipc = "^2.2.1"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
pyright = "^0.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
